force-app/main/default/objects/Athletic_Ticket__c/Athletic_Ticket__c.object-meta.xml
<CustomObject>
    <label>Athletic Ticket</label>
    <nameField>
        <displayFormat>AT-{0}</displayFormat>
        <label>Athletic Tickets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Athletic Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>