force-app/main/default/objects/Athletic_Ticket__c/fields/BEAT_event__c.field-meta.xml
<CustomField>
    <fullName>BEAT_event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BEAT event</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.nd_Campaign_Record_Type_Dev_Name__c</field>
            <operation>equals</operation>
            <value>BEAT_Event</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Athletic Tickets</relationshipLabel>
    <relationshipName>Athletic_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>