force-app/main/default/objects/Athletic_Ticket__c/fields/Exempt_Season_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Season_Tickets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exempt (Season Tickets)</label>
    <type>Checkbox</type>
</CustomField>