force-app/main/default/objects/Athletic_Ticket__c/fields/Migration_Source__c.field-meta.xml
<CustomField>
    <fullName>Migration_Source__c</fullName>
    <description>For migrations from Advance:
&quot;semi-colon separated advance source record key&quot;
For migrations from CRM ND:
&quot;salesforce record id of source record&quot; (salesforce field &quot;ID&quot;)</description>
    <label>Migration Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>