force-app/main/default/objects/Athletic_Ticket__c/fields/ND_Campaign__c.field-meta.xml
<CustomField>
    <fullName>ND_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Athletic Tickets (Campaign)</relationshipLabel>
    <relationshipName>Athletic_Tickets1</relationshipName>
    <type>Lookup</type>
</CustomField>