force-app/main/default/objects/Athletic_Ticket__c/fields/ND_Parent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>ND_Parent_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Athletic Tickets (Parent Campaign)</relationshipLabel>
    <relationshipName>Athletic_Tickets2</relationshipName>
    <type>Lookup</type>
</CustomField>