force-app/main/default/objects/Athletic_Ticket__c/fields/nd_Ticket_Parking_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>nd_Ticket_Parking_Type_Formula__c</fullName>
    <formula>CASE(TEXT( Ticket_Parking_Type__c ),
&apos;BO&apos;, &apos;Bowl Game&apos;,
&apos;CO&apos;, &apos;Complimentary&apos;,
&apos;FCM&apos;, &apos;Foleys Club Membership&apos;,
&apos;LOT&apos;, &apos;Lottery&apos;,
&apos;PL&apos;, &apos;Parking Lottery&apos;,
&apos;EX&apos;, &apos;Parking Lottery Exclude&apos;,
&apos;SF&apos;, &apos;Season 1842&apos;,
&apos;SB&apos;, &apos;Season Bench&apos;,
&apos;SC&apos;, &apos;Season Club&apos;,
&apos;SL&apos;, &apos;Season Loge&apos;,
&apos;SPA&apos;, &apos;Season Pass&apos;,
&apos;SPF&apos;, &apos;Season Preferred&apos;,
&apos;SS&apos;, &apos;Season Shamrock Game&apos;,
&apos;ST&apos;, &apos;Season Ticket&apos;,
&apos;SG&apos;, &apos;Single Game&apos;,
&apos;Single Game Exception&apos;, &apos;Single Game Exception&apos;,
&apos;GM&apos;, &apos;Single Game Purchase&apos;,
&apos;SO&apos;, &apos;South Club&apos;,
&apos;LA&apos;, &apos;Lottery Air Force&apos;,
&apos;LB&apos;, &apos;Lottery Arizona State&apos;,
&apos;LZ&apos;, &apos;Lottery Army&apos;,
&apos;L8&apos;, &apos;Lottery Ball State&apos;,
&apos;LS&apos;, &apos;Lottery Boston College&apos;,
&apos;M2&apos;, &apos;Lottery Bowling Green&apos;,
&apos;LC&apos;, &apos;Lottery BYU&apos;,
&apos;M8&apos;, &apos;Lottery California&apos;,
&apos;M5&apos;, &apos;Lottery Cincinnati&apos;,
&apos;LT&apos;, &apos;Lottery Clemson&apos;,
&apos;L1&apos;, &apos;Lottery Duke&apos;,
&apos;LM&apos;, &apos;Lottery Florida State&apos;,
&apos;L6&apos;, &apos;Lottery Georgia&apos;,
&apos;LU&apos;, &apos;Lottery Georgia Tech&apos;,
&apos;LN&apos;, &apos;Lottery Louisville&apos;,
&apos;M7&apos;, &apos;Lottery Marshall&apos;,
&apos;L2&apos;, &apos;Lottery Miami&apos;,
&apos;L7&apos;, &apos;Lottery Miami (Ohio)&apos;,
&apos;LD&apos;, &apos;Lottery Michigan&apos;,
&apos;LE&apos;, &apos;Lottery Michigan State&apos;,
&apos;LF&apos;, &apos;Lottery Navy&apos;,
&apos;L4&apos;, &apos;Lottery NC State&apos;,
&apos;L3&apos;, &apos;Lottery Nevada&apos;,
&apos;M1&apos;, &apos;Lottery New Mexico&apos;,
&apos;LO&apos;, &apos;Lottery North Carolina&apos;,
&apos;LP&apos;, &apos;Lottery Northwestern&apos;,
&apos;M6&apos;, &apos;Lottery Ohio State&apos;,
&apos;LG&apos;, &apos;Lottery Oklahoma&apos;,
&apos;LH&apos;, &apos;Lottery Pittsburgh&apos;,
&apos;LI&apos;, &apos;Lottery Purdue&apos;,
&apos;LQ&apos;, &apos;Lottery Rice&apos;,
&apos;LJ&apos;, &apos;Lottery Stanford&apos;,
&apos;LR&apos;, &apos;Lottery Syracuse&apos;,
&apos;LK&apos;, &apos;Lottery Temple&apos;,
&apos;LV&apos;, &apos;Lottery Texas&apos;,
&apos;M3&apos;, &apos;Lottery Toledo&apos;,
&apos;LW&apos;, &apos;Lottery UMass&apos;,
&apos;M9&apos;, &apos;Lottery UNLV&apos;,
&apos;LL&apos;, &apos;Lottery USC&apos;,
&apos;L9&apos;, &apos;Lottery Vanderbilt&apos;,
&apos;LX&apos;, &apos;Lottery Virginia&apos;,
&apos;L5&apos;, &apos;Lottery Virginia Tech&apos;,
&apos;LY&apos;, &apos;Lottery Wake Forest&apos;,
&apos;M4&apos;, &apos;Lottery Wisconsin&apos;,
&apos;MA&apos;, &apos;Lottery Tennessee State&apos;,
&apos;MB&apos;, &apos;Lottery Central Michigan&apos;,

&apos;&apos;
)</formula>
    <label>Ticket Parking Type Formula</label>
    <type>Text</type>
</CustomField>