force-app/main/default/objects/Athletic_Ticket__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Athletic Tickets</relationshipLabel>
    <relationshipName>Athletic_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>