force-app/main/default/objects/Athletic_Ticket__c/fields/Parking_Location__c.field-meta.xml
<CustomField>
    <fullName>Parking_Location__c</fullName>
    <formula>TEXT(Parking_Lot__c) &amp; &quot;:&quot; &amp;  Lot__c</formula>
    <label>Parking Location</label>
    <type>Text</type>
</CustomField>