force-app/main/default/objects/Athletic_Ticket__c/fields/Parking_Lot__c.field-meta.xml
<CustomField>
    <fullName>Parking_Lot__c</fullName>
    <label>Parking Lot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AERO</fullName>
                <label>Aero</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <label>Alumni</label>
            </value>
            <value>
                <fullName>AVE</fullName>
                <label>Ave</label>
            </value>
            <value>
                <fullName>BAND</fullName>
                <label>Band</label>
            </value>
            <value>
                <fullName>BK</fullName>
                <label>Bookstore</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Bulla</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Burke</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <label>Burke/Dorr</label>
            </value>
            <value>
                <fullName>BN</fullName>
                <label>Burke North</label>
            </value>
            <value>
                <fullName>BS</fullName>
                <label>Burke South</label>
            </value>
            <value>
                <fullName>CN</fullName>
                <label>Cartier North</label>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>Cartier South</label>
            </value>
            <value>
                <fullName>LTR</fullName>
                <label>DB+ Offer Letter</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Dorr</label>
            </value>
            <value>
                <fullName>LTRY</fullName>
                <label>DY Offer Letter</label>
            </value>
            <value>
                <fullName>ECK</fullName>
                <label>Eck</label>
            </value>
            <value>
                <fullName>GREN</fullName>
                <label>Green Field</label>
            </value>
            <value>
                <fullName>GUG</fullName>
                <label>Gug</label>
            </value>
            <value>
                <fullName>IP</fullName>
                <label>Innovation Park</label>
            </value>
            <value>
                <fullName>IPG</fullName>
                <label>Innovation Park Grass</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>IUSB Medical Lot</label>
            </value>
            <value>
                <fullName>IS</fullName>
                <label>Ivy</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>Joyce</label>
            </value>
            <value>
                <fullName>JH</fullName>
                <label>Joyce Handicap</label>
            </value>
            <value>
                <fullName>JONO</fullName>
                <label>Joyce North</label>
            </value>
            <value>
                <fullName>JOSO</fullName>
                <label>Joyce South</label>
            </value>
            <value>
                <fullName>LIBR</fullName>
                <label>Library</label>
            </value>
            <value>
                <fullName>MULT</fullName>
                <label>Multiple Passes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>North Lots</label>
            </value>
            <value>
                <fullName>OF</fullName>
                <label>Official</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>