force-app/main/default/objects/Athletic_Ticket__c/fields/Row__c.field-meta.xml
<CustomField>
    <fullName>Row__c</fullName>
    <label>Row</label>
    <length>10</length>
    <type>Text</type>
</CustomField>