force-app/main/default/objects/Athletic_Ticket__c/fields/Seat_Location__c.field-meta.xml
<CustomField>
    <fullName>Seat_Location__c</fullName>
    <formula>Section__c &amp; &quot;:&quot; &amp; Row__c &amp; &quot;:&quot; &amp; Seat__c</formula>
    <label>Seat Location</label>
    <type>Text</type>
</CustomField>