force-app/main/default/objects/Athletic_Ticket__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lottery</fullName>
            </value>
            <value>
                <fullName>Season</fullName>
            </value>
            <value>
                <fullName>Single-Game</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
                <isActive>false</isActive>
                <label>Parking</label>
            </value>
            <value>
                <fullName>Season Pass</fullName>
                <isActive>false</isActive>
                <label>Season Pass</label>
            </value>
            <value>
                <fullName>Single Game</fullName>
                <isActive>false</isActive>
                <label>Single Game</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>