force-app/main/default/objects/Athletic_Ticket__c/fields/Ticket_Parking_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Parking_Type__c</fullName>
    <label>Ticket/Parking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BO</fullName>
                <label>Bowl Game</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Complimentary</label>
            </value>
            <value>
                <fullName>FCM</fullName>
                <label>Foley&apos;s Club Membership</label>
            </value>
            <value>
                <fullName>LOT</fullName>
                <label>Lottery</label>
            </value>
            <value>
                <fullName>PL</fullName>
                <label>Parking Lottery</label>
            </value>
            <value>
                <fullName>EX</fullName>
                <label>Parking Lottery Exclude</label>
            </value>
            <value>
                <fullName>SF</fullName>
                <label>Season 1842</label>
            </value>
            <value>
                <fullName>SB</fullName>
                <label>Season Bench</label>
            </value>
            <value>
                <fullName>SC</fullName>
                <label>Season Club</label>
            </value>
            <value>
                <fullName>SL</fullName>
                <label>Season Loge</label>
            </value>
            <value>
                <fullName>SPA</fullName>
                <label>Season Pass</label>
            </value>
            <value>
                <fullName>SPF</fullName>
                <label>Season Preferred</label>
            </value>
            <value>
                <fullName>SS</fullName>
                <label>Season Shamrock Game</label>
            </value>
            <value>
                <fullName>ST</fullName>
                <label>Season Ticket</label>
            </value>
            <value>
                <fullName>SG</fullName>
                <label>Single Game</label>
            </value>
            <value>
                <fullName>Single Game Exception</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
                <label>Single Game Purchase</label>
            </value>
            <value>
                <fullName>SO</fullName>
                <label>South Club</label>
            </value>
            <value>
                <fullName>LA</fullName>
                <isActive>false</isActive>
                <label>Lottery Air Force</label>
            </value>
            <value>
                <fullName>LB</fullName>
                <isActive>false</isActive>
                <label>Lottery Arizona State</label>
            </value>
            <value>
                <fullName>LZ</fullName>
                <isActive>false</isActive>
                <label>Lottery Army</label>
            </value>
            <value>
                <fullName>LC</fullName>
                <isActive>false</isActive>
                <label>Lottery BYU</label>
            </value>
            <value>
                <fullName>L8</fullName>
                <isActive>false</isActive>
                <label>Lottery Ball State</label>
            </value>
            <value>
                <fullName>LS</fullName>
                <isActive>false</isActive>
                <label>Lottery Boston College</label>
            </value>
            <value>
                <fullName>M2</fullName>
                <isActive>false</isActive>
                <label>Lottery Bowling Green</label>
            </value>
            <value>
                <fullName>M8</fullName>
                <isActive>false</isActive>
                <label>Lottery California</label>
            </value>
            <value>
                <fullName>MB</fullName>
                <isActive>false</isActive>
                <label>Lottery Central Michigan</label>
            </value>
            <value>
                <fullName>M5</fullName>
                <isActive>false</isActive>
                <label>Lottery Cincinnati</label>
            </value>
            <value>
                <fullName>LT</fullName>
                <isActive>false</isActive>
                <label>Lottery Clemson</label>
            </value>
            <value>
                <fullName>L1</fullName>
                <isActive>false</isActive>
                <label>Lottery Duke</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>