force-app/main/default/objects/Athletic_Ticket__c/validationRules/Numeric_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>Numeric_Year</fullName>
    <active>true</active>
    <description>Year must only contain numeric values</description>
    <errorConditionFormula>NOT(REGEX(Year__c,&quot;^[0-9]+$&quot;))</errorConditionFormula>
    <errorMessage>Year must only contain numeric values</errorMessage>
</ValidationRule>