force-app/main/default/objects/Athletic_Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Constituent__c</columns>
    <columns>Organization__c</columns>
    <columns>Ticket_ID__c</columns>
    <columns>Sport__c</columns>
    <columns>Ticket_Parking_Type__c</columns>
    <columns>Quantity__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>